[tool.poetry]
name = "scrabadata"
version = "0.1"
description = "Visualisation des données de la FFSC"
license = "MIT"
authors = ["Raphaël Delhome <raphael.delhome@club-internet.fr>"]

# see versions and constraints https://poetry.eustace.io/docs/versions/
[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
pandas = "^0.25.0"
geocoder = "^1.38"
shapely = "^1.6"
luigi = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"

[tool.poetry.scripts]
scraba = "scrabadata.tools.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
